# FMM3D

./: .gitignore
.github/workflows/: build_upload.yaml  python.yml
conda.recipe/: recipe.yaml
docs/: conf.py
julia/: Manifest.toml  Project.toml
python/: meson.build  pyproject.toml
python/examples/: emfmm3d_example.py  hfmm3d_example.py  lfmm3d_example.py  stfmm3d_example.py
python/fmm3dpy/: __init__.py  fmm3d.py
python/test/: test_hfmm.py  test_lfmm.py
